ui-updates #commit 3: Removed the useEffect, wrapped grid-container with singin wrapper: class (specific to signin page), modified some styles

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,10 @@ $color-gray: #dfe1e2;
 $color-blue: #005ea2;
 $color-green: #00bb9d;
 $color-green-light: #00cfc8;
+
+body {
+  overflow: hidden !important;
+}
 h1 {
   color: $color-green-light;
 }
@@ -37,8 +41,21 @@ a:visited {
 
 #mainSection {
   min-height: 800px;
+  .signin {
+    background-image: url('/img/hero.jpg');
+    background-size: cover;
+    height: 100vh;
+    min-width: 100%;
+    h1 {
+      color: $color-green;
+    }
+    .usa-label {
+      color: $color-green-light;
+    }
+  }
   .grid-container {
     max-width: 80rem;
+
     &.signin {
       background-image: url('/img/hero.jpg');
       background-size: cover;
@@ -95,8 +112,9 @@ a:visited {
 
 .chat-content {
   background-color: transparent;
-  height: 650px;
+  height: 85vh;
   overflow-y: auto;
+  padding-bottom: 3rem;
 }
 
 .chat-content-question {
@@ -123,10 +141,11 @@ a:visited {
 }
 
 .search-area {
+  background: $color-white;
   position: absolute;
   width: 100%;
   max-width: 80rem;
-  padding: 40px 20px 20px 0;
+  padding: 15px 20px 20px 0;
 }
 
 .search-area-home {
