--- a/src/providers/uswds/uswds-settings.scss
+++ b/src/providers/uswds/uswds-settings.scss
@@ -1,6 +1,11 @@
-// node_modules\@uswds\uswds\packages\uswds-core
+/*
+  This file contains some of the most common USWDS design tokens. These tokens should be used to customize any USWDS theming where possible.
+  Additional design token settings can be found here: https://designsystem.digital.gov/documentation/settings/.
+  Spacing Units can be found here: https://designsystem.digital.gov/design-tokens/spacing-units/.
+*/
 @use 'uswds-core' with (
   $theme-show-notifications: false,
   $theme-font-path: '~uswds/dist/fonts',
-  $theme-image-path: '~uswds/dist/img'
+  $theme-image-path: '~uswds/dist/img',
+  $theme-focus-color: 'violet-80v'
 );
