ui-updates #commit updated search-and-extract to wiki-search, added cursor: pointer to avatar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -87,6 +87,7 @@ body {
 
   /* Custom styles */
   .sb-avatar.sb-avatar--src {
+    cursor: pointer;
     position: absolute;
     top: -4px;
     left: 1%;
