ui-svg-loader #commit added svg loader and logic to run loader

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -162,6 +162,11 @@ body {
     color: #005ea2;
   }
 
+  .searching {
+    height: 51px;
+    width: 128px;
+  }
+
   .chat-content {
     background-color: transparent;
     height: 82vh;
