ui-minor-adjustments # added styling and correction to horizon-hunt

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -86,6 +86,11 @@ body {
   }
 
   /* Custom styles */
+  #investigations {
+    .bottom-2 {
+      bottom: 2rem;
+    }
+  }
   .sb-avatar.sb-avatar--src {
     cursor: pointer;
     position: absolute;
