ui-history-page_updates # debugging push

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -101,6 +101,10 @@ body {
   .min-w {
     min-width: 80px;
   }
+  .searching {
+    max-width: 51px;
+    max-height: 128px;
+  }
   .dropdown {
     position: absolute;
     top: 105%;
