--- a/src/styles.scss
+++ b/src/styles.scss
@@ -174,6 +174,14 @@ body {
   .searching {
     height: 51px;
     width: 128px;
+
+    &.history {
+      max-width: none;
+      max-height: none;
+      width: 100%;
+      height: 79px;
+      margin: 0 auto;
+    }
   }
 
   .chat-content {
