ui-faq-page # added faq pages, updated routing, fixed/stickey header, css adjustments

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,9 +11,13 @@ $color-green: #00bb9d;
 $color-green-light: #00cfc8;
 
 body {
-  overflow: hidden !important;
   background-color: $color-primary-gray;
   height: 100%;
+  font-size: 1rem;
+
+  .usa-overlay {
+    z-index: 99;
+  }
 
   h1 {
     color: $color-green-light;
@@ -46,8 +50,16 @@ body {
     }
   }
 
+  header#headerSection {
+    position: fixed;
+    top: 0;
+    z-index: 100;
+    width: 100%;
+  }
+
   #mainSection {
     min-height: 800px;
+    margin-top: 96px;
     .signin {
       background-image: url('/img/hero.jpg');
       background-size: cover;
@@ -75,9 +87,23 @@ body {
       font-weight: 400;
       line-height: 1.2;
     }
+
+    #faqs {
+      p {
+        font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Roboto,
+          Arial, sans-serif;
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.4;
+      }
+    }
     .grid-container {
       max-width: 80rem;
+      .grid-col-2 {
+        flex: 1;
+      }
     }
+
     .usa__logo-mark {
       height: 40px;
       background: #381f59;
@@ -90,6 +116,16 @@ body {
     .bottom-2 {
       bottom: 2rem;
     }
+  }
+
+  .m-b-1 {
+    margin-bottom: 1rem;
+  }
+  .m-b-2 {
+    margin-bottom: 2rem;
+  }
+  .m-b-3 {
+    margin-bottom: 3rem;
   }
   .sb-avatar.sb-avatar--src {
     cursor: pointer;
@@ -173,6 +209,7 @@ body {
       > .usa-current::after {
       background-color: none !important;
     }
+
     .usa-nav__submenu {
       background: #381f59;
       padding-top: 0.5rem;
@@ -386,13 +423,6 @@ table.data-table tbody tr:hover {
     background-color: $color-green-light;
   }
 
-  #headerSection.usa-header--basic .dropdown .usa-nav__link:hover::after,
-  #headerSection.usa-header--basic
-    .usa-nav__primary-item
-    > .usa-current::after {
-    background-color: transparent;
-  }
-
   #headerSection.usa-header--basic .usa-navbar {
     width: 15%;
   }
@@ -422,20 +452,6 @@ table.data-table tbody tr:hover {
       height: 60px;
     }
   }
-
-  #headerSection.usa-header--basic .dropdown .usa-nav__link:hover::after,
-  #headerSection.usa-header--basic
-    .usa-nav__primary-item
-    > .usa-current::after {
-    background-color: transparent;
-  }
-
-  #headerSection.usa-header--basic .dropdown .usa-nav__link:hover::after,
-  #headerSection.usa-header--basic
-    .usa-nav__primary-item
-    > .usa-current::after {
-    background-color: transparent;
-  }
 }
 
 /* Mobile */
@@ -445,18 +461,21 @@ table.data-table tbody tr:hover {
       height: 30px;
     }
   }
+  main#mainSection {
+    margin-top: 46px;
+  }
   .usa-nav__primary a:not(.usa-button):not(.usa-current) {
     color: $color-primary;
   }
 
   body .sb-avatar.sb-avatar--src {
     position: absolute;
-    top: 176px;
+    top: 204px;
     left: 11%;
   }
   body .dropdown {
     position: absolute;
-    top: 229px;
+    top: 250px;
     left: 20px;
     display: block;
     width: 200px;
