--- a/src/styles.scss
+++ b/src/styles.scss
@@ -198,16 +198,17 @@ body {
 
   .dropdown {
     position: absolute;
-    top: 105%;
+    top: 110%;
     left: 0;
     display: block;
     width: 200px;
 
-    #headerSection.usa-header--basic .usa-nav__link:hover::after,
-    #headerSection.usa-header--basic
-      .usa-nav__primary-item
-      > .usa-current::after {
-      background-color: none !important;
+    /* Bottom-border on the span */
+    ul.usa-nav__submenu li.usa-nav__submenu-item a.usa-nav__link:hover {
+      text-decoration: none;
+      span {
+        border-bottom: 2px solid $color-green-light;
+      }
     }
 
     .usa-nav__submenu {
@@ -421,6 +422,14 @@ table.data-table tbody tr:hover {
     .usa-nav__primary-item
     > .usa-current::after {
     background-color: $color-green-light;
+  }
+
+  #headerSection.usa-header--basic .dropdown .usa-nav__link:hover::after,
+  #headerSection.usa-header--basic
+    .usa-nav__primary-item
+    .dropdown
+    .usa-current::after {
+    background-color: transparent !important;
   }
 
   #headerSection.usa-header--basic .usa-navbar {
