Update base theme settings. Landing page updates.

--- a/src/providers/uswds/uswds-settings.scss
+++ b/src/providers/uswds/uswds-settings.scss
@@ -5,5 +5,6 @@
   $theme-show-notifications: false,
   $theme-font-path: '~uswds/dist/fonts',
   $theme-image-path: '~uswds/dist/img',
-  $theme-focus-color: 'violet-80v'
+  $theme-focus-color: 'mint-90',
+  $theme-font-type-sans: 'public-sans'
 );
