--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,6 +46,7 @@ body {
 
   .usa-section {
     padding-top: 0 !important;
+    padding-bottom: 0 !important;
 
     h1 {
       color: $color-black;
@@ -62,8 +63,6 @@ body {
   }
 
   #mainSection {
-    min-height: 800px;
-    margin-top: 96px;
     .signin {
       background-image: url('/img/hero.jpg');
       background-size: cover;
@@ -131,14 +130,16 @@ body {
       padding: 24px 12px;
       background-color: $color-primary;
       color: $color-white;
-      border: 2px solid rgba(56, 31, 89, 0.2);
+      border: 2px solid $color-primary;
       cursor: pointer;
       border-radius: 10px;
       width: 350px;
       text-align: left;
       font-size: 0.9rem;
       &:hover {
-        border: 2px solid rgba(56, 31, 89, 0.7);
+        background-color: $color-white;
+        color: $color-primary;
+        border: 2px solid $color-primary;
       }
     }
     p.helper-text {
@@ -179,20 +180,38 @@ body {
 
     .search-area-input {
       flex: 1;
-      width: 97%;
       padding: 1rem;
       margin: 1rem 0;
       box-sizing: border-box;
-      border: 2px solid #381f59;
-      border-radius: 10px;
+      border: 2px solid #71767a;
+      border-radius: 8px;
       resize: none;
       overflow: hidden;
     }
+    .search-area-input:focus {
+      outline: none;
+    }
     button.search-input {
-      padding: 1rem;
+      min-height: 3rem;
+      padding: 12px 20px;
+      position: relative;
+      right: 16px;
+      border-top-left-radius: 0 !important;
+      border-bottom-left-radius: 0 !important;
+
+      &:disabled {
+        color: $color-white;
+        background-color: #adadad;
+        border-color: #adadad;
+      }
+
+      > .searching {
+        height: 18px;
+      }
     }
     textarea.search-area-input:disabled {
-      background-color: #eaeced;
+      color: #71767a;
+      background-color: $color-white;
     }
     .search-button {
       height: 40px; /* Set your desired height for the button */
@@ -212,12 +231,16 @@ body {
     display: none;
   }
   .text-container {
-    width: 100%;
+    width: 89%;
+    margin-right: 0;
     label {
       display: none;
     }
     .usa-textarea {
       height: 3rem;
+      border-right: none !important;
+      border-top-right-radius: 0 !important;
+      border-bottom-right-radius: 0 !important;
     }
     .usa-textarea,
     .usa-range,
@@ -260,15 +283,16 @@ body {
   }
 
   .usa-button {
-    color: $color-green-light;
-    background-color: $color-primary;
+    color: $color-black;
+    background-color: $color-green-light;
     border: 2px solid $color-green-light;
   }
 
   .usa-button:hover {
-    color: $color-green;
-    background-color: $color-primary;
+    color: $color-black;
+    background-color: $color-green-light;
     border: 2px solid $color-green-light;
+    text-decoration: underline;
   }
 
   .usa-button--outline {
@@ -301,6 +325,10 @@ body {
   }
 
   .usa-input:focus {
+    border-color: $color-primary;
+  }
+
+  .usa-textarea:focus {
     border-color: $color-primary;
   }
 
