Updates to investigation page.

--- a/src/providers/uswds/uswds-settings.scss
+++ b/src/providers/uswds/uswds-settings.scss
@@ -5,6 +5,8 @@
   $theme-show-notifications: false,
   $theme-font-path: '~uswds/dist/fonts',
   $theme-image-path: '~uswds/dist/img',
+  $theme-grid-container-max-width: 'full',
   $theme-focus-color: 'mint-90',
+  $theme-focus-width: 0,
   $theme-font-type-sans: 'public-sans'
 );
