--- a/src/styles.scss
+++ b/src/styles.scss
@@ -103,7 +103,8 @@ body {
       }
     }
     .grid-container {
-      max-width: 80rem;
+      max-width: unset;
+      width: 90%;
       .grid-col-2 {
         flex: 1;
       }
@@ -175,6 +176,7 @@ body {
   }
 
   .search-area {
+    max-width: 80rem;
     display: flex;
     align-items: center;
 
@@ -187,9 +189,6 @@ body {
       border-radius: 8px;
       resize: none;
       overflow: hidden;
-    }
-    .search-area-input:focus {
-      outline: none;
     }
     button.search-input {
       min-height: 3rem;
@@ -278,10 +277,6 @@ body {
     }
   }
 
-  .usa-nav-container {
-    max-width: unset;
-  }
-
   .usa-button {
     color: $color-black;
     background-color: $color-green-light;
@@ -355,24 +350,32 @@ body {
 
   .chat-content {
     background-color: transparent;
-    height: 82vh;
     overflow-y: auto;
-    padding-bottom: 3rem;
     flex-direction: column-reverse;
     display: flex;
   }
 
+  // .chat-content-question {
+  //   background-color: #381f59;
+  //   border-top-right-radius: 10px;
+  //   color: #ffffff;
+  //   border-radius: 4px;
+  //   padding: 1rem;
+  //   margin: 2rem 0;
+  //   align-self: flex-end;
+  //   border-top-left-radius: 20px;
+  //   border-top-right-radius: 20px;
+  //   border-bottom-right-radius: 20px;
+  // }
+
   .chat-content-question {
-    background-color: #381f59;
-    border-top-right-radius: 10px;
-    color: #ffffff;
+    background-color: $color-white;
+    border: 1px solid $color-gray;
+    color: $color-black;
     border-radius: 4px;
-    padding: 1rem;
-    margin: 2rem 0;
-    align-self: flex-end;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
+    padding: 20px;
+    line-height: 1.75rem;
+    white-space: pre-wrap;
   }
 
   .chat-content-answer {
@@ -380,9 +383,23 @@ body {
     border: 1px solid $color-gray;
     color: $color-black;
     border-radius: 4px;
-    padding: 35px 20px;
+    padding: 20px;
     line-height: 1.75rem;
     white-space: pre-wrap;
+  }
+
+  .chat-question-avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 3px solid $color-primary;
+    background-color: $color-white;
+    font-weight: 700;
+    > span {
+      position: relative;
+      top: 3px;
+      left: 14px;
+    }
   }
 
   .datasets {
